partially fix issue when title overlapping ui
closes #13 (at least temporally)

--- a/src/components/TrackItem/TrackItem.module.css
+++ b/src/components/TrackItem/TrackItem.module.css
@@ -33,7 +33,7 @@ That's why to cast for example 1.5 to em I have to use calc(1em * 1.5) ¯\_(ツ)
 	font-size: 2.1em;
 	font-weight: 100;
 	text-shadow: 0.1px 0.1px;
-	width: fit-content;
+	width: 85%;
 }
 
 .icon_wrapper {
